--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chromadb>=1.0.17",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.27",
+    "langchain-huggingface>=0.3.1",
+    "sentence-transformers>=5.1.0",
+    "torch>=2.8.0",
+    "transformers>=4.55.2",
 ]
