--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-huggingface>=0.3.1",
+    "pyttest>=0.1",
     "sentence-transformers>=5.1.0",
     "torch>=2.8.0",
     "transformers>=4.55.2",
