--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "chroma>=0.2.0",
     "chromadb>=1.0.17",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-huggingface>=0.3.1",
+    "nltk>=3.9.1",
     "pyttest>=0.1",
+    "redis>=6.4.0",
     "sentence-transformers>=5.1.0",
     "torch>=2.8.0",
     "transformers>=4.55.2",
