--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "chroma>=0.2.0",
     "chromadb>=1.0.17",
+    "colorama>=0.4.6",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-huggingface>=0.3.1",
