--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "langchain-community>=0.3.27",
     "langchain-huggingface>=0.3.1",
     "nltk>=3.9.1",
+    "pandas>=2.3.1",
     "pyttest>=0.1",
     "redis>=6.4.0",
     "sentence-transformers>=5.1.0",
